force-app/main/default/objects/Integration_Response_Mapping__c/Integration_Response_Mapping__c.object-meta.xml
<CustomObject>
    <label>Integration Response Mapping</label>
    <nameField>
        <displayFormat>INT-RSP-{0000}</displayFormat>
        <label>Integration Response Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Response Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>