force-app/main/default/objects/Integration_Response_Mapping__c/fields/Is_Error_Path__c.field-meta.xml
<CustomField>
    <fullName>Is_Error_Path__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, maps to error response</description>
    <label>Is Error Path</label>
    <type>Checkbox</type>
</CustomField>