force-app/main/default/objects/Integration_Response_Mapping__c/fields/Response_JSON_Path__c.field-meta.xml
<CustomField>
    <fullName>Response_JSON_Path__c</fullName>
    <description>JSONPath expression to extract value</description>
    <label>Response JSON Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>