force-app/main/default/objects/Integration_Response_Mapping__c/fields/Success_Status_Codes__c.field-meta.xml
<CustomField>
    <fullName>Success_Status_Codes__c</fullName>
    <defaultValue>&quot;200,201,202,204&quot;</defaultValue>
    <label>Success Status Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>