force-app/main/default/objects/Integration_Response_Mapping__c/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <description>Salesforce field to map to</description>
    <label>Target Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>