force-app/main/default/objects/Integration_Response_Mapping__c/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <description>Salesforce object to map to</description>
    <label>Target Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>