force-app/main/default/objects/Integration_Response_Mapping__c/fields/Transform_Expression__c.field-meta.xml
<CustomField>
    <fullName>Transform_Expression__c</fullName>
    <description>Transformation expression</description>
    <label>Transform Expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>